# keep-fm

./: .coveragerc  .env  .flake8  .gitignore  .travis.yml  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  lefthook.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.py
docker/backend/: Dockerfile
keep_fm/: asgi.py  celery.py  conftest.py  jinja2.py  settings.py  settings_test.py  urls.py  wsgi.py
keep_fm/api/: serializers.py
keep_fm/common/: forms.py  models.py  parse.py  views.py
keep_fm/common/spotify/: naming.py
keep_fm/common/tests/: test_views.py
keep_fm/scrapers/: apps.py  base.py  exceptions.py  tasks.py
keep_fm/scrapers/lastfm/: base.py  scrobbles.py
keep_fm/scrappers/: apps.py  base.py  exceptions.py  tasks.py
keep_fm/scrappers/lastfm/: base.py  scrobbles.py
keep_fm/scrobbles/: admin.py  apps.py  data.py  forms.py  models.py  processors.py  querysets.py  views.py
keep_fm/scrobbles/migrations/: 0001_initial.py  0002_auto_20200513_1854.py  0003_auto_20200513_1933.py
keep_fm/scrobbles/tests/: test_views.py
keep_fm/static/: style.css
keep_fm/templates/: _nav.html  base.html
keep_fm/templates/auth/: login.html
keep_fm/templates/dashboard/: base.html  main.html
keep_fm/templates/rankings/: _ranking.html  _ranking_artists.html  _ranking_tracks.html  artists.html  base.html  basic_ranking.html  combined-artists.html  combined-tracks.html  combined.html  (+2 more)
keep_fm/tracks/: admin.py  apps.py  models.py  slugs.py
keep_fm/users/: admin.py  apps.py  models.py  views.py
(+15 files in other folders)
