[tool.poetry]
name = "keep-fm"
version = "0.1.0"
description = ""
authors = ["Rafal Jusiak <jusiak.raf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
python-env-loader = "^0.0.1"
ipython = "^7.14.0"
psycopg2-binary = "^2.8.5"
celery = "^4.4.2"
gunicorn = "^20.0.4"
redis = "^3.5.1"
beautifulsoup4 = "^4.9.0"
urllib3 = "^1.25.9"
spotipy = "^2.12.0"
tqdm = "^4.46.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.1"
black = "^19.10b0"
flake8-bugbear = "^20.1.4"
flake8-django = "^1.0.0"
pep8-naming = "^0.10.0"
bandit = "^1.6.2"
mypy = "^0.782"
django-stubs = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
